--- a/gdextension_generator/SConstruct
+++ b/gdextension_generator/SConstruct
@@ -2,6 +2,11 @@
 import os
 import sys
 
+# Local dependency paths, adapt them to your setup
+godot_headers_path = "godot-cpp/godot-headers/"
+cpp_bindings_path = "godot-cpp/"
+cpp_library = "libgodot-cpp"
+
 # Try to detect the host platform automatically.
 # This is used if no `platform` argument is passed
 if sys.platform.startswith("linux"):
@@ -28,16 +33,12 @@ opts.Add(BoolVariable("use_llvm", "Use the LLVM / Clang compiler", "no"))
 opts.Add(PathVariable("target_path", "The path where the lib is installed.", "../addons/goutte.template.inja/bin/", PathVariable.PathAccept))
 opts.Add(PathVariable("target_name", "The library name.", "libgdinja", PathVariable.PathAccept))
 
-# Local dependency paths, adapt them to your setup
-godot_headers_path = "godot-cpp/godot-headers/"
-cpp_bindings_path = "godot-cpp/"
-cpp_library = "libgodot-cpp"
-
-# only support 64 at this time..
-bits = 64
-
 # Updates the environment with the option variables.
 opts.Update(env)
+
+
+
+bits = env['bits']
 
 print(env['platform'])
 print(env['p'])
@@ -145,12 +146,19 @@ else:
 
 cpp_library += ".x86_" + str(bits)
 
-# make sure our binding library is properly includes
-env.Append(CPPPATH=[".", godot_headers_path, cpp_bindings_path + "include/", cpp_bindings_path + "gen/include/"])
-env.Append(LIBPATH=[cpp_bindings_path + "bin/"])
+# Make sure our binding library is properly included
+env.Append(CPPPATH=[
+    ".",
+    godot_headers_path,
+    cpp_bindings_path + "include/",
+    cpp_bindings_path + "gen/include/",
+])
+env.Append(LIBPATH=[
+    cpp_bindings_path + "bin/",
+])
 env.Append(LIBS=[cpp_library])
 
-# tweak this if you want to use different folders, or more folders, to store your source code in.
+# Tweak this if you want to use other directories to store the source code in
 env.Append(CPPPATH=["src/"])
 sources = Glob("src/*.cpp")
 
